# spark-code

./: .gitignore  LICENSE  PLAN.md  README.md  SPARK.md  fibonacci.py  hello_spark.py  main.py  nord_colors.py  pong.py  pyproject.toml  snake.py  test_pong.py
.spark/memory/: MEMORY.md
docs/superpowers/plans/: 2026-03-26-spark-code-polish-v2.md  2026-03-26-spark-code-polish.md  2026-04-03-projectplan-command.md
docs/superpowers/specs/: 2026-03-26-spark-code-polish-design.md  2026-03-26-spark-code-polish-v2-design.md  2026-04-03-projectplan-command-design.md
skills/: example.yaml
spark_code/: __init__.py  agent.py  branches.py  cli.py  config.py  context.py  custom_tools.py  fallback.py  hooks.py  memory.py  model.py  permissions.py  pinned.py  plan_executor.py  platform_info.py  project_detect.py  projectplan.py  snippets.py  stats.py  task_store.py  team.py  tool_cache.py  watcher.py
spark_code/mcp/: __init__.py  client.py  registry.py  transport.py
spark_code/skills/: __init__.py  base.py
spark_code/tools/: __init__.py  base.py  bash.py  edit_file.py  glob_search.py  grep_search.py  list_dir.py  read_file.py  send_message.py  spawn_worker.py  todo.py  wait_for_workers.py  web_fetch.py  web_search.py  write_file.py
spark_code/ui/: __init__.py  diff.py  hotkeys.py  input.py  output.py  permission_prompt.py  spinner.py  theme.py
tests/: conftest.py  test_agent.py  test_audit_fixes.py  test_config.py  test_context.py  test_memory.py  test_model.py  test_permissions.py  test_platform_info.py  test_polish_features.py  test_project_detect.py  test_projectplan.py  test_round2_features.py  test_round3_features.py  test_round4_features.py  test_stats.py  test_task_store.py  test_team.py  test_v2_features.py  test_wait_for_workers.py
tests/test_tools/: test_bash.py  test_edit_file.py  test_glob_search.py  test_grep_search.py  test_read_file.py  test_write_file.py
