[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "spark-code"
version = "0.1.0"
description = "Your local AI coding assistant — like Claude Code, powered by your own model"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Alexandra Titus"}
]

dependencies = [
    "rich>=13.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "click>=8.0",
    "prompt-toolkit>=3.0",
    "beautifulsoup4>=4.12",
    "duckduckgo-search>=4.0",
    "pygments>=2.17",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
spark = "spark_code.cli:main"

[tool.setuptools.packages.find]
include = ["spark_code*"]
